_css/main.less
@charset "UTF-8";

/* ---------------------------------------------------------- 
	SAPIENT BRAND TOOLKIT
------------------------------------------------------------- */
@piano: #040707;
@charcoal: #1D1D1D;
@sapient-heat: #D32728;
@electric-blue: #21ADDD;
@aluminum-gray: #DfE5E6;
@ice-white: #FFFFFF;

@font-face {
	font-family: 'SapientCentroSlab-Light';
	src:url('../_fonts/SapientCentroSlab-Light.otf');
}

@font-face {
	font-family: 'SapientCentroSlab-Black';
	src:url('../_fonts/SapientCentroSlab-Black.otf');
}
@font-face {
	font-family: 'SapientCentroSlab-MedItalic';
	src:url('../_fonts/SapientCentroSlab-MedItalic.otf');
}

@font-face {
	font-family: 'SapientCentroSlab-Thin';
	src:url('../_fonts/SapientCentroSlab-Thin.otf');
}

@font-face {
	font-family: 'SapientCentroSlab-XThinItal';
	src:url('../_fonts/SapientCentroSlab-XThinItal.otf');
}

@font-face {
	font-family: 'SapientSans-Medium';
	src:url('../_fonts/SPNTSM.ttf');
}

@font-face {
	font-family: 'SapientSans-Light';
	src:url('../_fonts/SPNTSL.ttf');
}

@sapient-centro-light: 'SapientCentroSlab-Light';
@sapient-centro-black: 'SapientCentroSlab-Black';
@sapient-centro-meditalic: 'SapientCentroSlab-MedItalic';
@sapient-centro-thin: 'SapientCentroSlab-Thin';
@sapient-centro-xthinitalic: 'SapientCentroSlab-XThinItal';
@sapient-sans-medium: 'SapientSans-Medium';
@sapient-sans-light: 'SapientSans-Light';

@ribbonHeight : 75px;
@devicesHeight: 300px;
@progressBarHeight: 2px;

@app-li-one: @charcoal;
@app-li-two: #e8e8e8;
@app-li-three: #666666;

/* ---------------------------------------------------------- */

html, body {
	width:100%;
	height:100%;
	margin:0;
	padding:0;
	overflow:hidden;
}

.clearfix:after {
     visibility: hidden;
     display: block;
     font-size: 0;
     content: " ";
     clear: both;
     height: 0;
     }
.clearfix { display: inline-block; }
/* start commented backslash hack \*/
* html .clearfix { height: 1%; }
.clearfix { display: block; }
/* close commented backslash hack */

.text-shadow (@string: 0 1px 3px rgba(0, 0, 0, 0.25)) {
	text-shadow: @string;
}
.box-shadow (@string) {
	-webkit-box-shadow: @string;
	-moz-box-shadow:    @string;
	box-shadow:         @string;
}
.drop-shadow (@x: 0, @y: 1px, @blur: 2px, @spread: 0, @alpha: 0.25) {
	-webkit-box-shadow:	@x @y @blur @spread rgba(0, 0, 0, @alpha);
	-moz-box-shadow:	@x @y @blur @spread rgba(0, 0, 0, @alpha);
	box-shadow:		@x @y @blur @spread rgba(0, 0, 0, @alpha);
}
.inner-shadow (@x: 0, @y: 1px, @blur: 2px, @spread: 0, @alpha: 0.25) {
	-webkit-box-shadow: inset @x @y @blur @spread rgba(0, 0, 0, @alpha);
	-moz-box-shadow:    inset @x @y @blur @spread rgba(0, 0, 0, @alpha);
	box-shadow:         inset @x @y @blur @spread rgba(0, 0, 0, @alpha);
}

.box-sizing (@type: border-box) {
	-webkit-box-sizing: @type;
	-moz-box-sizing:    @type;
	box-sizing:         @type;
}

.border-radius (@radius: 5px) {
	-webkit-border-radius: @radius;
	-moz-border-radius:    @radius;
	border-radius:         @radius;

	-moz-background-clip:    padding;
	-webkit-background-clip: padding-box;
	background-clip:         padding-box;
}
.border-radiuses (@topright: 0, @bottomright: 0, @bottomleft: 0, @topleft: 0) {
	-webkit-border-top-right-radius:    @topright;
	-webkit-border-bottom-right-radius: @bottomright;
	-webkit-border-bottom-left-radius:  @bottomleft;
	-webkit-border-top-left-radius:     @topleft;

	-moz-border-radius-topright:        @topright;
	-moz-border-radius-bottomright:     @bottomright;
	-moz-border-radius-bottomleft:      @bottomleft;
	-moz-border-radius-topleft:         @topleft;

	border-top-right-radius:            @topright;
	border-bottom-right-radius:         @bottomright;
	border-bottom-left-radius:          @bottomleft;
	border-top-left-radius:             @topleft;

	-moz-background-clip:    padding; 
	-webkit-background-clip: padding-box; 
	background-clip:         padding-box; 
}

.opacity (@opacity: 0.5) {
	-webkit-opacity: 	@opacity;
	-moz-opacity: 		@opacity;
	opacity: 		@opacity;
}

.gradient (@startColor: #eee, @endColor: white) {
	background-color: @startColor;
	background: -webkit-gradient(linear, left top, left bottom, from(@startColor), to(@endColor));
	background: -webkit-linear-gradient(top, @startColor, @endColor);
	background: -moz-linear-gradient(top, @startColor, @endColor);
	background: -ms-linear-gradient(top, @startColor, @endColor);
	background: -o-linear-gradient(top, @startColor, @endColor);
}
.horizontal-gradient (@startColor: #eee, @endColor: white) {
 	background-color: @startColor;
	background-image: -webkit-gradient(linear, left top, right top, from(@startColor), to(@endColor));
	background-image: -webkit-linear-gradient(left, @startColor, @endColor);
	background-image: -moz-linear-gradient(left, @startColor, @endColor);
	background-image: -ms-linear-gradient(left, @startColor, @endColor);
	background-image: -o-linear-gradient(left, @startColor, @endColor);
}

.animation (@name, @duration: 300ms, @delay: 0, @ease: ease) {
	-webkit-animation: @name @duration @delay @ease;
	-moz-animation:    @name @duration @delay @ease;
	-ms-animation:     @name @duration @delay @ease;
}

.transition (@transition) {
	-webkit-transition: @transition;  
	-moz-transition:    @transition;
	-ms-transition:     @transition; 
	-o-transition:      @transition;  
}
.transform(@string){
	-webkit-transform: @string;
	-moz-transform: 	 @string;
	-ms-transform: 		 @string;
	-o-transform: 		 @string;
}
.scale (@factor) {
	-webkit-transform: scale(@factor);
	-moz-transform: 	 scale(@factor);
	-ms-transform: 		 scale(@factor);
	-o-transform: 		 scale(@factor);
}
.rotate (@deg) {
	-webkit-transform: rotate(@deg);
	-moz-transform: 	 rotate(@deg);
	-ms-transform: 		 rotate(@deg);
	-o-transform: 		 rotate(@deg);
}
.skew (@deg, @deg2) {
	-webkit-transform:       skew(@deg, @deg2);
	-moz-transform: 	 skew(@deg, @deg2);
	-ms-transform: 		 skew(@deg, @deg2);
	-o-transform: 		 skew(@deg, @deg2);
}
.translate (@x, @y:0) {
	-webkit-transform:       translate(@x, @y);
	-moz-transform: 	 translate(@x, @y);
	-ms-transform: 		 translate(@x, @y);
	-o-transform: 		 translate(@x, @y);
}
.translate3d (@x, @y: 0, @z: 0) {
	-webkit-transform:       translate3d(@x, @y, @z);
	-moz-transform: 	 translate3d(@x, @y, @z);
	-ms-transform: 		 translate3d(@x, @y, @z);
	-o-transform: 		 translate3d(@x, @y, @z);
}
.perspective (@value: 1000) {
	-webkit-perspective: 	@value;
	-moz-perspective: 	@value;
	-ms-perspective: 	@value;
	perspective: 		@value;
}
.transform-origin (@x:center, @y:center) {
	-webkit-transform-origin: @x @y;
	-moz-transform-origin:    @x @y;
	-ms-transform-origin:     @x @y;
	-o-transform-origin:      @x @y;
}

/* ---------------------------------------------------------- */

#ribbon {
	width:100%;
	height:@ribbonHeight;
	background:@sapient-heat;
	position: absolute;
	top: 0;
	.box-shadow(0px 3px 5px 0px rgba(50, 50, 50, 0.75));
}

#devices {
	width:100%;
	height:@devicesHeight;
	background:@electric-blue;
	margin-top:@ribbonHeight;
	overflow:hidden;

	.container {
		width:100%;
		height:@devicesHeight - @progressBarHeight;

		ul {
			padding:0px;
			margin:0px;
			height:100%;
			width:100%;
		}

		li {
			width:25%;
			height:100%;
			float: left;
			text-align: center;
		}
	}

	img {
		height:75%;
		max-width:100%;
		position:relative;
	}

	#ipad img {
		height:65%;
	}

}

#projects {
	width:100%;
	/* height is determined in setup.js */
	background:@piano;
	overflow:hidden;
	overflow-x:auto;

	ul {
		/* width is determined in setup.js */
		height:100%;
		padding:0;
		margin:0;
		margin-left:5px;

		li {
			list-style-type: none;
			width:21%;
			height:100%;
			padding:0;
			margin:0 5px 0 0;
			float: left;
			position:relative;

			&:last-child {
				margin-right:0px;
			}

			.app-bar {
				width:100%;
				height:0px;
				position:relative;
				top:-1%;
				background:@sapient-heat;
				.transition(all 300ms ease);

				&.hover {
					height: 15px;
				}
			}

			.overview {
				width:100%;
				height:99%;
				.transition(all 300ms ease);
			}

			.app-icon {
				background:@sapient-heat;
				width:35%;
				height:75px;
				position: relative;
				top:25%;
				margin:0 auto;
			}

			.app-title {
				background:@sapient-heat;
				width:85%;
				height:30px;
				position:relative;
				top:45%;
				margin:0 auto;
			}

			&:nth-of-type(3n) .overview {
				background:@app-li-one;
			}			

			&:nth-of-type(3n-2) .overview {
				background:@app-li-two;
			}

			&:nth-of-type(3n-1) .overview {
				background:@app-li-three;
			}

			&.clicked {
				.overview {
					background:@ice-white;
				}
			}
			&.hover {
				.overview {
					background: @ice-white;
					height: 95%;
				}

			}
		}
	}

	#projects-hover {
		position:absolute;
		bottom:0;
		width:100%;
		pointer-events:none;
	}

}

#app-content {
	background:@ice-white;
	width:100%;
	height: @devicesHeight;
	position: absolute;
	top:@ribbonHeight;
	opacity: 0;
}

.hover-left.enabled {
	position:absolute;
	left:0;
}

.hover-right.enabled {
	position:absolute;
	right:0;
}

.progress-bar {
	width:0px;
	height:@progressBarHeight;
	background:@piano;
	.transition(all 500ms ease);

	&.enabled {
		width:100%;
	}
}

/*-----------------------------------*/


/*Landscape Mode*/

@media screen and (max-device-width: 480px) 
{ 

}
/* Portrait Mode */

@media screen and (max-device-width: 320px) 
{ 
	#ribbon {
		height:60px;
	}

	#devices {
		height:175px;
		margin-top:60px;

		.container {
			height:173px;
		}
	}

}










​

